--- a/MassiveWhitelist/MassiveWhitelist.Web/appsettings.json
+++ b/MassiveWhitelist/MassiveWhitelist.Web/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MassiveWhitelistDbContext": "Server=.\\sqlexpress;Initial Catalog=MassiveWhitelist;Persist Security Info=False;Connection Timeout=30;Trusted_Connection=True;"
+  }
 }
